# ZeroTierOne

./: .clang-format  .clangd  .dockerignore  .drone.jsonnet  .drone.yml  .gitattributes  .gitignore  .gitignore.orig  .kick  AUTHORS.md  AUTHORS.txt  BUILDING.md  BUILDING.txt  CMakeLists.txt  COPYING  Cargo.toml  Dockerfile.ci  Dockerfile.release  Jenkinsfile  LICENSE.md  LICENSE.txt  Makefile  Makefile.linux  Makefile.mac  OFFICIAL-RELEASE-STEPS.md  PROTOCOL.md  README.docker.md  README.md  RELEASE-NOTES.md  RUNNING.md  RUNNING.txt  SECURITY.md  ZSSP.md  ZeroTierOne.sln  ZeroTierOne.vcxproj  ZeroTierOne.vcxproj.filters  build.bat  buildinstaller.sh  bump_revision.sh  cli.cpp  (+42 more)
aes-gmac-siv/: Cargo.toml  README.md
aes-gmac-siv/src/: impl_gcrypt.rs  impl_macos.rs  impl_openssl.rs  lib.rs
allthethings/: Cargo.toml
allthethings/src/: config.rs  iblt.rs  lib.rs  link.rs  memorystore.rs  node.rs  protocol.rs  replicator.rs  store.rs  varint.rs
controller/: CMakeLists.txt  Cargo.toml  ConnectionPool.hpp  DB.cpp  DB.hpp  DBMirrorSet.cpp  DBMirrorSet.hpp  EmbeddedNetworkController.cpp  EmbeddedNetworkController.hpp  FileDB.cpp  FileDB.hpp  JSONDB.cpp  JSONDB.hpp  LFDB.cpp  LFDB.hpp  PostgreSQL.cpp  PostgreSQL.hpp  README.md  RabbitMQ.cpp  RabbitMQ.hpp  Redis.hpp  RethinkDB.cpp  RethinkDB.hpp  SqliteNetworkController.cpp  SqliteNetworkController.hpp  controller-api-model.js  controller-api-test.sh  schema.sql  schema.sql.c  schema2c.sh
controller/central-docker/: Dockerfile  main.sh
controller/migrate-sqlite/: migrate.js  package.json
controller/src/: cache.rs  controller.rs  database.rs  filedatabase.rs  handler.rs  lib.rs  main.rs  model.rs  postgresdatabase.rs
controller/zt1-controller-client/: index.js  package.json  test-controller.js
core/: AES.cpp  AES.hpp  AES_aesni.cpp  AES_armcrypto.cpp  Address.hpp  Blob.hpp  Buf.cpp  Buf.hpp  C25519.cpp  C25519.hpp  CAPI.cpp  CMakeLists.txt  CallContext.hpp  Capability.cpp  CapabilityCredential.cpp  CapabilityCredential.hpp  Certificate.cpp  Certificate.hpp  CertificateOfMembership.hpp  CertificateOfOwnership.hpp  Constants.hpp  Containers.hpp  Context.hpp  Credential.cpp  Credential.hpp  Defaults.cpp  Defaults.hpp  Defragmenter.hpp  Dictionary.cpp  Dictionary.hpp  ECC384.cpp  ECC384.hpp  Endpoint.cpp  Endpoint.hpp  EphemeralKey.hpp  Expect.hpp  FCV.hpp  Fingerprint.hpp  IdentificationCertificate.cpp  IdentificationCertificate.hpp  (+75 more)
core-crypto/: Cargo.toml  README.md
core-crypto/benches/: benchmark_crypto.rs
core-crypto/src/: aes.rs  hex.rs  lib.rs  noise.rs  p384.rs  p384_internal.rs  random.rs  salsa.rs  x25519.rs  zssp.rs
crypto/: Cargo.toml  LICENSE  README.md  ZSSP.md  build.rs
crypto/benches/: benchmark_crypto.rs
crypto/src/: aes.rs  aes_fruity.rs  aes_gmac_siv.rs  aes_gmac_siv_openssl.rs  aes_openssl.rs  aes_tests.rs  bn.rs  cipher_ctx.rs  ec.rs  error.rs  hash.rs  kbkdf.rs  lib.rs  mimcvdf.rs  p384.rs  poly1305.rs  random.rs  salsa.rs  secret.rs  typestate.rs  verified.rs  x25519.rs  zssp.rs
ext/libpqxx-7.7.3/: .clang-format  .cmake-format  .gitignore  .lgtm.yml  AUTHORS  BUILDING-cmake.md  BUILDING-configure.md  CMakeLists.txt  COPYING  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  VERSION  aclocal.m4  appveyor.yml  autogen.sh  compile_flags.in  configitems  configure  configure.ac  libpqxx.pc.in  requirements.json
iblt/: Cargo.toml
iblt/benches/: clone.rs  list.rs  merge.rs  to_from_bytes.rs
iblt/src/: lib.rs
java/: CMakeLists.txt  README.md  build.xml
java/jni/: Android.mk  Application.mk  ZT1_jnicache.cpp  ZT1_jnicache.h  ZT1_jnilookup.cpp  (+28 more)
network-hypervisor/: Cargo.toml
node/: AES-aesni.c  AES.cpp  AES.hpp  AES_aesni.cpp  AES_armcrypto.cpp  Address.hpp  AntiRecursion.hpp  Array.hpp  AtomicCounter.hpp  BSDRoutingTable.cpp  BSDRoutingTable.hpp  BandwidthAccount.hpp  BinarySemaphore.hpp  BlobArray.hpp  BloomFilter.hpp  Bond.cpp  Bond.hpp  BondController.cpp  BondController.hpp  Buf.cpp  Buf.hpp  Buffer.hpp  C25519.cpp  C25519.hpp  CMWC4096.hpp  CMakeLists.txt  Capability.cpp  Capability.hpp  CertificateOfMembership.cpp  CertificateOfMembership.hpp  CertificateOfOwnership.cpp  CertificateOfOwnership.hpp  CertificateOfRepresentation.hpp  Cluster.cpp  Cluster.hpp  Condition.hpp  Constants.hpp  Containers.hpp  Credential.cpp  Credential.hpp  (+167 more)
openssl-sys/: Cargo.toml
openssl-zt/: Cargo.toml
osdep/: Arp.cpp  Arp.hpp  BSDEthernetTap.cpp  BSDEthernetTap.hpp  BSDEthernetTapFactory.cpp  BSDEthernetTapFactory.hpp  BSDRoutingTable.cpp  BSDRoutingTable.hpp  BackgroundResolver.cpp  BackgroundResolver.hpp  Binder.hpp  BlockingQueue.hpp  CMakeLists.txt  EthernetTap.cpp  EthernetTap.hpp  EthernetTapFactory.hpp  Http.cpp  Http.hpp  HttpClient.cpp  HttpClient.hpp  Link.hpp  LinuxDropPrivileges.cpp  LinuxDropPrivileges.hpp  LinuxEthernetTap.cpp  LinuxEthernetTap.hpp  LinuxEthernetTapFactory.cpp  LinuxEthernetTapFactory.hpp  LinuxNetLink.cpp  LinuxNetLink.hpp  LinuxRoutingTable.cpp  MacDNSHelper.hpp  MacDNSHelper.mm  MacEthernetTap.cpp  MacEthernetTap.hpp  MacEthernetTapAgent.c  MacEthernetTapAgent.h  MacKextEthernetTap.cpp  MacKextEthernetTap.hpp  ManagedRoute.cpp  ManagedRoute.hpp  (+39 more)
root/: CMakeLists.txt  Makefile  geoip-html.h  root.cpp
rust-zerotier-core/: Cargo.toml  build.rs
rust-zerotier-service/: Cargo.toml  build.rs
service/: ButtFlare.cpp  ButtFlare.hpp  CMakeLists.txt  Cargo.toml  ClusterDefinition.hpp  ClusterGeoIpService.cpp  ClusterGeoIpService.hpp  ControlPlane.cpp  ControlPlane.hpp  ControlPlaneSubsystem.hpp  MULTIPATH.md  One.cpp  One.hpp  OneService.cpp  OneService.hpp  README.md  SoftwareUpdater.cpp  SoftwareUpdater.hpp
syncwhole/: Cargo.toml
system-service/: Cargo.toml
tcp-proxy/: Cargo.toml  Makefile  Metrics.cpp  Metrics.hpp  README.md  tcp-proxy  tcp-proxy.cpp
utils/: Cargo.toml
vl1-service/: Cargo.toml
zeroidc/: .gitattributes  Cargo.toml  build.rs  zeroidc.vcxproj  zeroidc.vcxproj.filters
zerotier-core-crypto/: Cargo.toml
zerotier-network-hypervisor/: Cargo.toml
zerotier-system-service/: Cargo.toml
zssp/: Cargo.toml  README.md  ZSSP.md  changes.txt
(+3000 files in other folders)
