[package]
name = "aes-gmac-siv"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[target."cfg(all(not(any(target_os = \"macos\", target_os = \"ios\")), target_arch = \"s390x\"))".dependencies]
openssl = "^0"

[target."cfg(not(any(target_os = \"macos\", target_os = \"ios\")))".dependencies]
gcrypt = "^0"

[dev-dependencies]
sha2 = "^0"
