[package]
name = "aes-gmac-siv"
version = "0.1.0"
edition = "2018"
license = "BSD"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[target."cfg(not(any(target_os = \"macos\", target_os = \"ios\")))".dependencies]
openssl = "^0"

#[target."cfg(all(not(any(target_os = \"macos\", target_os = \"ios\")), any(target_arch = \"s390x\", target_arch = \"powerpc64le\", target_arch = \"powerpc64\")))".dependencies]
#openssl = "^0"

#[target."cfg(not(any(target_os = \"macos\", target_os = \"ios\", target_arch = \"s390x\", target_arch = \"powerpc64le\", target_arch = \"powerpc64\")))".dependencies]
#gcrypt = "^0"

[dev-dependencies]
sha2 = "^0"
