[package]
name = "allthethings"
version = "0.1.0"
edition = "2021"

[dependencies]
smol = { version = "^1", features = [] }
zerotier-core-crypto = { path = "../zerotier-core-crypto" }
socket2 = "^0"
serde = { version = "^1", features = ["derive"], default-features = false }
rmp-serde = "^0"
serde_json = { version = "^1", features = ["std"], default-features = false }
parking_lot = "^0"
