[package]
name = "zerotier-network-controller"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zerotier-controller"
path = "src/main.rs"

[dependencies]
zerotier-crypto = { path = "../crypto" }
zerotier-utils = { path = "../utils", features = ["tokio"] }
zerotier-network-hypervisor = { path = "../network-hypervisor" }
zerotier-service = { path = "../service" }
async-trait = "^0"
serde = { version = "^1", features = ["derive"], default-features = false }
serde_json = { version = "^1", features = ["std"], default-features = false }
clap = { version = "^3", features = ["std", "suggestions"], default-features = false }
notify = { version = "^5", features = ["macos_fsevent"], default-features = false }
tokio-postgres = "^0"
pin-utils = "^0"
