[package]
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]
edition = "2021"
license = "MPL-2.0"
name = "zerotier-crypto"
version = "0.1.0"

[dependencies]
zerotier-utils = { path = "../utils" }
ed25519-dalek = { version = "1.0.1", features = ["std", "u64_backend"], default-features = false }
poly1305 = { version = "0.8.0", features = [], default-features = false }
x25519-dalek = { version = "1.2.0", features = ["std", "u64_backend"], default-features = false }
openssl = { package = "openssl-zt", path = "../openssl-zt" }

[target."cfg(windows)".dependencies]
winapi = { version = "^0", features = ["handleapi", "ws2ipdef", "ws2tcpip"] }

[target."cfg(not(windows))".dependencies]
libc = "^0"
signal-hook = "^0"
