[package]
name = "zerotier-crypto"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "Apache-2.0"
description = "OpenSSL bindings"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2021"
version = "0.1.0"


[dependencies]
ed25519-dalek = { version = "1.0.1", features = ["std", "u64_backend"], default-features = false }
poly1305 = { version = "0.8.0", features = [], default-features = false }
x25519-dalek = { version = "1.2.0", features = ["std", "u64_backend"], default-features = false }
cfg-if = "1.0"
foreign-types = "0.5.0"
libc = "0.2"
lazy_static = "^1"
rand_core = "0.6.4"
ctor = "^0"
#ed25519-dalek still uses rand_core 0.5.1, and that version is incompatible with 0.6.4, so we need to import and implement both.
rand_core_051 = { package = "rand_core", version = "0.5.1" }

ffi = { package = "openssl-sys", version = "0.9.80", path = "../openssl-sys" }

[dev-dependencies]
hex = "0.4.3"
hex-literal = "0.3.4"
