[package]
name = "iblt"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Adam Ierymenko <adam.ierymenko@zerotier.com>"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
crc32fast = "^1"
zerocopy = { version = "0.6.1", features = ["alloc"] }

[dev-dependencies]
rand = ">=0"
criterion = ">=0"

[lib]

[[bench]]
name = "to_from_bytes"
harness = false

[[bench]]
name = "clone"
harness = false

[[bench]]
name = "list"
harness = false

[[bench]]
name = "merge"
harness = false
