[package]
name = "zerotier-network-hypervisor"
version = "2.0.0"
edition = "2018"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'

[dependencies]
ztcrypto = { path = "../ztcrypto" }
base64 = "^0"
urlencoding = "^2"
lz4_flex = { version = "^0", features = ["safe-encode", "safe-decode", "checked-decode"] }
dashmap = "^4"
parking_lot = "^0"
concat-arrays = "^0"

[target."cfg(not(windows))".dependencies]
libc = "^0"

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["ws2tcpip"] }
