[package]
name = "zerotier-network-hypervisor"
version = "2.0.0"
edition = "2021"
license = "MPL-2.0"
authors = ["ZeroTier, Inc. <contact@zerotier.com>", "Adam Ierymenko <adam.ierymenko@zerotier.com>"]

[features]
default = ["debug_events"]
debug_events = []

[dependencies]
zerotier-crypto = { path = "../crypto" }
zerotier-utils = { path = "../utils" }
lz4_flex = { version = "^0", features = ["safe-encode", "safe-decode", "checked-decode"] }
serde = { version = "^1", features = ["derive"], default-features = false }
phf = { version = "^0", features = ["macros", "std"], default-features = false }
num-traits = "^0"
rmp-serde = "^1"
fastcdc = "^3"

[dev-dependencies]
rand = "*"
serde_json = "*"
serde_cbor = "*"
criterion = "^0"

[target."cfg(not(windows))".dependencies]
libc = "^0"

[target."cfg(windows)".dependencies]
winapi = { version = "^0", features = ["ws2tcpip"] }

[[bench]]
name = "benchmark_identity"
harness = false
